tests/baselines/reference/classConstructorAccessibility3.errors.txt
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility3.ts(21,1): error TS2322: Type 'typeof Baz' is not assignable to type 'typeof Foo'.
  Cannot assign a 'protected' constructor type to a 'public' constructor type.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility3.ts(22,1): error TS2322: Type 'typeof Qux' is not assignable to type 'typeof Foo'.
  Cannot assign a 'private' constructor type to a 'public' constructor type.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility3.ts(26,1): error TS2322: Type 'typeof Foo' is not assignable to type 'typeof Baz'.
  Cannot assign a 'public' constructor type to a 'protected' constructor type.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility3.ts(27,1): error TS2322: Type 'typeof Bar' is not assignable to type 'typeof Baz'.
  Cannot assign a 'public' constructor type to a 'protected' constructor type.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility3.ts(28,1): error TS2322: Type 'typeof Qux' is not assignable to type 'typeof Baz'.
  Cannot assign a 'private' constructor type to a 'protected' constructor type.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility3.ts(32,1): error TS2322: Type 'typeof Foo' is not assignable to type 'typeof Qux'.
  Cannot assign a 'public' constructor type to a 'private' constructor type.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility3.ts(33,1): error TS2322: Type 'typeof Bar' is not assignable to type 'typeof Qux'.
  Cannot assign a 'public' constructor type to a 'private' constructor type.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility3.ts(34,1): error TS2322: Type 'typeof Baz' is not assignable to type 'typeof Qux'.
  Cannot assign a 'protected' constructor type to a 'private' constructor type.


==== tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility3.ts (8 errors) ====
    
    class Foo {
         constructor(public x: number) { }
    }
    
    class Bar {
        public constructor(public x: number) { }
    }
    
    class Baz {
        protected constructor(public x: number) { }
    }
    
    class Qux {
         private constructor(public x: number) { }
    }
    
    // b is public
    let a = Foo;
    a = Bar;
    a = Baz; // error Baz is protected
    ~
!!! error TS2322: Type 'typeof Baz' is not assignable to type 'typeof Foo'.
!!! error TS2322:   Cannot assign a 'protected' constructor type to a 'public' constructor type.
    a = Qux; // error Qux is private
    ~
!!! error TS2322: Type 'typeof Qux' is not assignable to type 'typeof Foo'.
!!! error TS2322:   Cannot assign a 'private' constructor type to a 'public' constructor type.
    
    // b is protected
    let b = Baz;
    b = Foo; // error Foo is public
    ~
!!! error TS2322: Type 'typeof Foo' is not assignable to type 'typeof Baz'.
!!! error TS2322:   Cannot assign a 'public' constructor type to a 'protected' constructor type.
    b = Bar; // error Baz is public
    ~
!!! error TS2322: Type 'typeof Bar' is not assignable to type 'typeof Baz'.
!!! error TS2322:   Cannot assign a 'public' constructor type to a 'protected' constructor type.
    b = Qux; // error Qux is private
    ~
!!! error TS2322: Type 'typeof Qux' is not assignable to type 'typeof Baz'.
!!! error TS2322:   Cannot assign a 'private' constructor type to a 'protected' constructor type.
    
    // c is private
    let c = Qux;
    c = Foo; // error Foo is public
    ~
!!! error TS2322: Type 'typeof Foo' is not assignable to type 'typeof Qux'.
!!! error TS2322:   Cannot assign a 'public' constructor type to a 'private' constructor type.
    c = Bar; // error Bar is public
    ~
!!! error TS2322: Type 'typeof Bar' is not assignable to type 'typeof Qux'.
!!! error TS2322:   Cannot assign a 'public' constructor type to a 'private' constructor type.
    c = Baz; // error Baz is protected
    ~
!!! error TS2322: Type 'typeof Baz' is not assignable to type 'typeof Qux'.
!!! error TS2322:   Cannot assign a 'protected' constructor type to a 'private' constructor type.